# blackhole_in_space

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  DEPLOYMENT.md  ISSUES.md  LICENSE  README.md  SECURITY.md  docker-compose.yml  vercel.json
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: codeql.yml  web-build.yml
Kimi_Agent_Vault Site Review/vault-improved/: IMPLEMENTATION_GUIDE.md
Kimi_Agent_Vault Site Review/vault-improved/homepage/: next.config.ts  package.json  tailwind.config.ts
Kimi_Agent_Vault Site Review/vault-improved/homepage/public/: manifest.json  robots.txt  sitemap.xml
app/: index.html  tailwind.config.js
app/src/: App.css  App.tsx  index.css
backend/.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
backend/.github/workflows/: ci.yml
backend/core/src/: lib.rs
backend/core/src/math/: elliptic_curve.rs  lattice.rs  mod.rs
backend/monitoring/: prometheus.yml
backend/server/: Dockerfile  go.mod
backend/server/cmd/relay/: main.go
backend/server/internal/client/: client.go
core/src/protocol/: mod.rs
core/src/wasm/: mod.rs
core/src/zk/: mod.rs
desktop/linux/vault-linux-app/: .env.example  .gitignore  DEPLOYMENT.md  IDENTITY_MODEL.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  QUICK_REFERENCE.md  README.md  config.js  install.sh  main.js  package.json
desktop/linux/vault-linux-app/renderer/: index.html
desktop/linux/vault-linux-app/services/: auth.js  cryptography.js  database.js  email.js  websocket.js
desktop/macos/VaultMacOS-Complete-v1.0.0/VaultMacOS/: .gitignore  BUILD.md  DEPLOY.md  PROJECT_SUMMARY.md  Package.swift  README.md  (+5 more)
desktop/windows/vault-windows/: BUILD_INSTRUCTIONS.md  DOWNLOAD_README.txt  PROJECT_OVERVIEW.md  QUICK_START.md  README.md
docs/: DEPLOYMENT_GUIDE.md  ICON_GUIDELINES.md
forticomm/: .env.example  FEATURES.md  INNOVATIONS.md  README.md  SECURITY.md  build.sh  docker-compose.yml
forticomm-blackhole/: README.md
forticomm-blackhole/.github/ISSUE_TEMPLATE/: security_vulnerability.md
forticomm-blackhole/core/: Cargo.toml
forticomm-blackhole/core/src/crypto/: mod.rs
forticomm-blackhole/monitoring/: prometheus.yml
forticomm-blackhole/web/: Dockerfile  tailwind.config.js  tsconfig.json  vite.config.ts
forticomm-blackhole/web/src/: App.tsx
forticomm/core/: Cargo.toml
forticomm/core/src/: ai_assistant.rs  backup.rs  crisis_mode.rs  key_hierarchy.rs  lib.rs  mls_manager.rs  pqc.rs  secure_storage.rs  signal_protocol.rs  wasm_bindings.rs
forticomm/server/: Dockerfile  go.mod
forticomm/web/: Dockerfile
helm/: Chart.yaml  values.yaml
homepage/: README.md  package.json
homepage and stuffs/src/app/: page.tsx
homepage/public/: manifest.json
homepage/src/app/: layout.tsx  page.tsx
homepage/src/components/: DemoBanner.tsx  DownloadSection.tsx  Footer.tsx  Navbar.tsx  StructuredData.tsx
homepage/src/hooks/: index.ts  use3DTilt.ts  useScrollReveal.ts
linux/: FILE_MANIFEST.md
mobile/VaultiOS/: README.md
mobile/ios/: README.md
server/: config.yaml
server/internal/config/: config.go
web/: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  INDEX.md  LICENSE  PROJECT_SUMMARY.md  QUICKSTART.md  README.md  docker-compose.yml  index.html  nginx.conf  package.json  render.yaml
web/.github/workflows/: ci-cd.yml
web/client/: index.html  package.json  tailwind.config.js  vite.config.ts
web/client/src/: App.tsx  index.css  main.tsx
web/server/: package.json  server.js
web/src/: index.css
web/src/components/: Layout.tsx  Sidebar.tsx
web/src/pages/: Contacts.tsx
web/src/stores/: cryptoStore.ts
(+131 files in other folders)
