[package]
name = "blackhole-core"
version = "0.1.0"
edition = "2021"
authors = ["FortiComm Black Hole Contributors <singularity@forticomm.blackhole>"]
description = "The mathematically unbreakable core of FortiComm Black Hole"
license = "MIT"
repository = "https://github.com/forticomm/blackhole"
keywords = ["cryptography", "messaging", "black-hole", "post-quantum", "zero-knowledge"]
categories = ["cryptography", "wasm"]

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Core cryptography
rand = { version = "0.8", features = ["getrandom"] }
rand_core = "0.6"
sha3 = "0.10"
blake3 = "1.5"

# Elliptic curves
curve25519-dalek = { version = "4.1", features = ["digest", "serde"] }
ed25519-dalek = "2.1"
x25519-dalek = "2.0"

# Lattice-based (Post-Quantum)
pqcrypto-kyber = "0.7"
pqcrypto-dilithium = "0.5"
pqcrypto-traits = "0.3"

# Zero-Knowledge
ark-ff = "0.4"
ark-ec = "0.4"
ark-bn254 = "0.4"
ark-groth16 = "0.4"
ark-snark = "0.4"
ark-relations = "0.4"
ark-r1cs-std = "0.4"
ark-serialize = "0.4"

# Homomorphic Encryption
tfhe = { version = "0.5", optional = true }

# WASM
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Crypto", "Window", "Performance"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Memory safety
zeroize = { version = "1.7", features = ["derive", "zeroize_derive"] }
secrecy = "0.8"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
console_log = "1.0"

# Math utilities
num-bigint = "0.4"
num-traits = "0.2"
num-integer = "0.2"

# Async
futures = "0.3"

[dev-dependencies]
wasm-bindgen-test = "0.3"
criterion = "0.5"
proptest = "1.4"

[features]
default = ["wasm"]
wasm = ["wasm-bindgen", "js-sys", "web-sys"]
homomorphic = ["tfhe"]
parallel = ["rayon"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
