[package]
name = "forticomm-core"
version = "0.1.0"
edition = "2021"
authors = ["FortiComm Contributors"]
description = "Cryptographic core for FortiComm secure messaging"
license = "MIT"
repository = "https://github.com/forticomm/forticomm"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
# Signal Protocol
libsignal-protocol = { git = "https://github.com/signalapp/libsignal", branch = "main" }

# MLS (Messaging Layer Security)
openmls = { version = "0.6", features = ["crypto_openssl"] }
openmls_traits = "0.6"

# WebAssembly
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
web-sys = { version = "0.3", features = ["console", "Crypto", "Window"] }

# Cryptography
aes-gcm = "0.10"
argon2 = "0.5"
rand = "0.8"
sha3 = "0.10"
x25519-dalek = "2.0"
ed25519-dalek = "2.1"

# Post-quantum cryptography
pqcrypto-kyber = "0.7"
pqcrypto-traits = "0.3"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde-wasm-bindgen = "0.6"

# Memory safety
zeroize = { version = "1.7", features = ["derive"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
log = "0.4"
console_log = "1.0"

[dependencies.uuid]
version = "1.6"
features = ["v4", "wasm-bindgen"]

[dev-dependencies]
wasm-bindgen-test = "0.3"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.wasm-release]
inherits = "release"
opt-level = 'z'
